--- a/app/src/main/res/layout/activity_temperatures.xml
+++ b/app/src/main/res/layout/activity_temperatures.xml
@@ -28,7 +28,7 @@
         android:background="@android:color/white"
         tools:listitem="@layout/recyclerview_adapter_temperatures" />
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/company"
         android:src="@drawable/cradle"
         android:contentDescription="@string/company_image"
@@ -37,7 +37,7 @@
         android:layout_height="70dp"
         android:layout_width="120dp"
         android:layout_gravity="center"
-        tools:ignore="NotSibling" />
+        tools:ignore="NotSibling" />-->
 
     <GridLayout
         android:layout_width="wrap_content"
